<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb4_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fergonzaramos@yahoo.es">fernando</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>turtlebot4_simulator</exec_depend>
  <exec_depend>irobot_create_common_bringup</exec_depend>
  <exec_depend>irobot_create_ignition_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
